--- a/notebooks/try.ipynb
+++ b/notebooks/try.ipynb
@@ -4,11 +4,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **Enhancing Workplace Productivity Using Advanced Prompting Techniques**\n",
+    "#### Importing Libraries"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "import redis\n",
+    "import requests\n",
+    "import json"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
     "\n",
-    "#### **Introduction**\n",
-    "##### This notebook demonstrates how to leverage advanced prompting techniques to optimize workflow,\n",
-    "##### automate tasks, and improve decision-making using a Large Language Model (LLM)."
+    "# Load environment variables\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "\n",
+    "# Load environment variables\n",
+    "from dotenv import load_dotenv\n",
+    "load_dotenv()"
    ]
   },
   {
