--- a/notebooks/try.ipynb
+++ b/notebooks/try.ipynb
@@ -89,6 +89,127 @@
    "metadata": {},
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 1. Few-Shot Learning\n",
+    "#### Use Case: Customer Support Email Classification\n",
+    "\n",
+    "Classify customer support emails into categories like \"Billing,\" \"Technical Support,\" \"Account Issues,\" or \"General Inquiry.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output for Few-Shot Learning:\n",
+      "General Inquiry\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Few-shot learning prompt\n",
+    "prompt = \"\"\"\n",
+    "Classify the following customer support emails into one of the categories: Billing, Technical Support, Account Issues, General Inquiry.\n",
+    "\n",
+    "Example 1:  \n",
+    "Email: \"I can't log in to my account. It says my password is incorrect.\"  \n",
+    "Category: Account Issues  \n",
+    "\n",
+    "Example 2:  \n",
+    "Email: \"I was charged twice for my subscription this month. Can you refund the extra charge?\"  \n",
+    "Category: Billing  \n",
+    "\n",
+    "Example 3:  \n",
+    "Email: \"The app keeps crashing when I try to open it on my phone.\"  \n",
+    "Category: Technical Support  \n",
+    "\n",
+    "Now classify this email:  \n",
+    "Email: \"I want to know more about your premium subscription plans.\"  \n",
+    "Category:\n",
+    "\"\"\"\n",
+    "\n",
+    "response = model.generate_content(prompt)\n",
+    "print(\"Output for Few-Shot Learning:\")\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- The model uses the provided examples to classify the new email. Since the email asks about subscription plans, it falls under the General Inquiry category. The output demonstrates how few-shot learning helps the model generalize from examples to new inputs."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 2. Chain-of-Thought (CoT) Prompting\n",
+    "\n",
+    "#### **Use Case**: Solving Math Word Problems\n",
+    "Solve a multi-step math problem by breaking it down into logical steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output for Chain-of-Thought Prompting:\n",
+      "Your solution is perfectly correct and clearly explained.  Good job!\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# CoT prompt\n",
+    "prompt = \"\"\"\n",
+    "Solve the following problem step by step:  \n",
+    "\n",
+    "Problem: A bakery sells 120 cupcakes in a day. If each cupcake costs $2.50 and the bakery operates 6 days a week, how much revenue does the bakery generate in a week?  \n",
+    "\n",
+    "Step 1: Calculate daily revenue.  \n",
+    "Daily revenue = Number of cupcakes per day × Cost per cupcake  \n",
+    "Daily revenue = 120 × $2.50 = $300  \n",
+    "\n",
+    "Step 2: Calculate weekly revenue.  \n",
+    "Weekly revenue = Daily revenue × Number of operating days per week  \n",
+    "Weekly revenue = $300 × 6 = $1800  \n",
+    "\n",
+    "\"\"\"\n",
+    "\n",
+    "# Generate response\n",
+    "response = model.generate_content(prompt)\n",
+    "print(\"Output for Chain-of-Thought Prompting:\")\n",
+    "print(response.text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
