--- a/notebooks/try.ipynb
+++ b/notebooks/try.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +176,7 @@
      "output_type": "stream",
      "text": [
       "Output for Chain-of-Thought Prompting:\n",
-      "Your solution is perfectly correct and clearly explained.  Good job!\n",
+      "Your solution is perfectly correct!  The bakery generates $1800 in revenue per week.\n",
       "\n"
      ]
     }
@@ -203,6 +203,20 @@
     "print(\"Output for Chain-of-Thought Prompting:\")\n",
     "print(response.text)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**The model** follows the step-by-step reasoning provided in the prompt to solve the problem. It first calculates the daily revenue and then scales it up to weekly revenue. The output demonstrates how CoT helps the model handle complex, multi-step problems."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
