--- a/notebooks/try.ipynb
+++ b/notebooks/try.ipynb
@@ -212,6 +212,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 3. Self-Consistency\n",
+    "\n",
+    "#### Use Case: Fact Verification\n",
+    "Verify the accuracy of a statement by cross-checking it with multiple reasoning paths."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
