--- a/notebooks/try.ipynb
+++ b/notebooks/try.ipynb
@@ -223,10 +223,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Output for Self-Consistency:\n",
+      "Your provided reasoning is correct and clearly demonstrates two different ways to disprove the statement.  Both paths accurately lead to the conclusion that the Eiffel Tower is not in London.\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Self-consistency prompt\n",
+    "prompt = \"\"\"\n",
+    "Verify the following statement by providing two different reasoning paths:  \n",
+    "\n",
+    "Statement: \"The Eiffel Tower is located in London.\"  \n",
+    "\n",
+    "Reasoning Path 1:  \n",
+    "The Eiffel Tower is a famous landmark in Paris, France. London is the capital of the United Kingdom. Therefore, the statement is false.  \n",
+    "\n",
+    "Reasoning Path 2:  \n",
+    "The Eiffel Tower was built for the 1889 World's Fair in Paris. It has never been relocated to London. Thus, the statement is false.  \n",
+    "\n",
+    "Conclusion: Both reasoning paths confirm that the statement is false.  \n",
+    "\"\"\"\n",
+    "\n",
+    "# Generate response\n",
+    "response = model.generate_content(prompt)\n",
+    "print(\"Output for Self-Consistency:\")\n",
+    "print(response.text)"
+   ]
   },
   {
    "cell_type": "code",
