--- a/notebooks/try.ipynb
+++ b/notebooks/try.ipynb
@@ -266,6 +266,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4. Generate Knowledge Prompting\n",
+    "\n",
+    "#### Use Case: Explaining Complex Concepts\n",
+    "Explain a complex concept like \"quantum computing\" in simple terms."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
