--- a/notebooks/try.ipynb
+++ b/notebooks/try.ipynb
@@ -47,34 +47,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Imagine a regular computer bit like a light switch, it can be either ON (1) or OFF (0).  A quantum bit, or qubit, is like a special light switch that can be ON, OFF, or *both at the same time*.  This \"both at the same time\" state is called superposition.\n",
+      "Imagine a regular computer bit like a light switch, either on (1) or off (0).  A quantum bit, or qubit, is like a dimmer switch. It can be on, off, or somewhere in between, like a mixture of both. This \"in between\" state is called superposition.\n",
       "\n",
-      "Another key idea is entanglement. Imagine two of these special light switches linked together.  When you flip one, the other instantly flips too, no matter how far apart they are.  This is entanglement – qubits are linked in a way that their fates are intertwined.\n",
+      "Another key idea is entanglement. Imagine two of these dimmer switches linked together magically.  Knowing the setting of one instantly tells you the setting of the other, no matter how far apart they are.\n",
       "\n",
-      "Because qubits can be in multiple states at once and are linked together, a quantum computer can explore many possibilities simultaneously.  This allows it to tackle certain types of problems much faster than a regular computer, like:\n",
+      "Quantum computers use these special qubits and entanglement to explore many possibilities simultaneously. It's like flipping lots of coins at once instead of one at a time. This allows them to solve certain types of problems, like drug discovery or materials science, much faster than regular computers.  However, they're not meant to replace your laptop. They're specialized tools for specific tasks.\n",
       "\n",
-      "* **Drug discovery:** Simulating molecules to design new medicines.\n",
-      "* **Materials science:** Creating new materials with specific properties.\n",
-      "* **Financial modeling:** Predicting market trends and managing risk.\n",
-      "* **Cryptography:** Breaking current encryption methods and creating new, more secure ones.\n",
-      "\n",
-      "It's important to remember that quantum computers aren't meant to replace regular computers. They're good at specific tasks, while regular computers are better at everyday things like browsing the internet or writing emails.  Think of them as specialized tools for very complex problems.\n",
-      "\n",
-      "Quantum computing is still in its early stages, but it has the potential to revolutionize many fields.\n",
+      "It's still early days for quantum computing, and building these machines is extremely challenging.  But the potential is huge, and scientists are working hard to unlock its power.\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Define your prompt\n",
-    "prompt = \"Explain quantum computing in simple terms.\"\n",
+    "prompt = \"Explain quantum computing in simple terms. (e.g., no *, **, or other formatting symbols).\"\n",
     "\n",
     "# Generate a response\n",
     "response = model.generate_content(prompt)\n",
@@ -277,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -285,24 +278,21 @@
      "output_type": "stream",
      "text": [
       "Output for Generate Knowledge Prompting:\n",
-      "## Quantum Computing Explained Simply:\n",
+      "1.  Classical computers store information as bits, which are either 0 or 1.\n",
+      "2.  Quantum computers use qubits, which can be 0, 1, or a combination of both simultaneously.\n",
+      "3.  This \"both at once\" state is called superposition.\n",
+      "4.  Superposition allows qubits to hold much more information than bits.\n",
+      "5.  Another quantum phenomenon, entanglement, links two or more qubits together.\n",
+      "6.  Entangled qubits share the same fate, even when separated.  Changing one instantly changes the others.\n",
+      "7.  Quantum computers use quantum algorithms, special sets of instructions, to manipulate qubits and perform calculations.\n",
+      "8.  Quantum computers are not meant to replace classical computers entirely.\n",
+      "9.  They excel at specific tasks that are difficult or impossible for classical computers.\n",
+      "10. Examples include breaking current encryption, simulating molecules for drug discovery, and optimizing complex systems.\n",
+      "11. Building and maintaining quantum computers is challenging and expensive.\n",
+      "12. The field of quantum computing is still in its early stages, but it holds immense potential.\n",
       "\n",
-      "Here's a breakdown using the provided knowledge points:\n",
       "\n",
-      "**1. Qubits vs. Bits:** Imagine a light switch. It can be either ON (1) or OFF (0). This is how bits in regular computers work. Now imagine a special light switch that can be ON, OFF, or *both at the same time*. This is a qubit!  It can be 0, 1, or a combination of both thanks to superposition.\n",
-      "\n",
-      "**2. Superposition:**  Think of a coin spinning in the air.  It's not heads *or* tails until it lands. A qubit is like that spinning coin. It exists in a blurry state of both possibilities until we measure it. This \"both at once\" capability lets quantum computers explore many possibilities simultaneously.\n",
-      "\n",
-      "**3. Entanglement:** Imagine two of those spinning coins magically linked. When one lands on heads, the other *instantly* lands on tails, no matter how far apart they are. This is entanglement.  Linked qubits influence each other, allowing quantum computers to perform calculations across all linked qubits at once, drastically speeding up complex problem-solving.\n",
-      "\n",
-      "**4. Applications:**  Because of superposition and entanglement, quantum computers are great for:\n",
-      "\n",
-      "* **Cryptography:** Breaking current encryption methods and creating new, unbreakable ones.\n",
-      "* **Optimization:**  Finding the best solution among a massive number of possibilities (like optimizing delivery routes or financial portfolios).\n",
-      "* **Drug Discovery:** Simulating molecules and their interactions to design new drugs and materials.\n",
-      "* **Scientific Research:**  Solving complex scientific problems in fields like materials science, physics, and chemistry.\n",
-      "\n",
-      "**In short:** Quantum computers use the weirdness of quantum mechanics (superposition and entanglement) to perform powerful calculations that are impossible for regular computers. While still in early stages, they have the potential to revolutionize many fields.\n",
+      "Explanation: Quantum computers are a revolutionary type of computer that harnesses the strange properties of quantum mechanics to solve complex problems. Unlike classical computers that use bits as the basic unit of information, quantum computers use qubits.  Qubits can be in a superposition, representing both 0 and 1 at the same time. This, along with entanglement, allows them to handle exponentially more information and perform calculations impossible for even the most powerful classical computers.  While still in development, quantum computing could revolutionize fields like medicine, materials science, and artificial intelligence.\n",
       "\n"
      ]
     }
@@ -310,7 +300,8 @@
    "source": [
     "# Generate knowledge prompt\n",
     "prompt = \"\"\"\n",
-    "Explain quantum computing in simple terms by generating relevant knowledge points:  \n",
+    "Explain quantum computing in simple terms by generating relevant knowledge points:  ((e.g., no *, **, or other formatting symbols).  \n",
+    ")\n",
     "\n",
     "1. Quantum computing uses qubits instead of classical bits.  \n",
     "2. Qubits can exist in multiple states at once (superposition).  \n",
