--- a/notebooks/try.ipynb
+++ b/notebooks/try.ipynb
@@ -325,6 +325,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5. Program-aided Language Model (PAL)\n",
+    "\n",
+    "#### Use Case: Writing Code to Solve a Problem\n",
+    "Generate Python code to calculate the factorial of a number."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
