--- a/notebooks/try.ipynb
+++ b/notebooks/try.ipynb
@@ -338,7 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# PAL prompt\n",
+    "###### PAL prompt\n",
     "prompt = \"\"\"\n",
     "Write a Python function to calculate the factorial of a given number using recursion.  \n",
     "\n",
@@ -352,99 +352,6 @@
     "\n",
     "# Example usage:  \n",
     "print(factorial(5))  # Output: 120  "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Output for Generate Knowledge Prompting:\n",
-      "```python\n",
-      "def factorial_recursive(n):\n",
-      "    \"\"\"\n",
-      "    Calculates the factorial of a non-negative integer using recursion.\n",
-      "\n",
-      "    Args:\n",
-      "        n: The non-negative integer.\n",
-      "\n",
-      "    Returns:\n",
-      "        The factorial of n.  Raises a ValueError if n is negative.\n",
-      "        Returns 1 if n is 0.\n",
-      "    \"\"\"\n",
-      "\n",
-      "    if n < 0:\n",
-      "        raise ValueError(\"Factorial is not defined for negative numbers.\")\n",
-      "    elif n == 0:\n",
-      "        return 1\n",
-      "    else:\n",
-      "        return n * factorial_recursive(n - 1)\n",
-      "\n",
-      "\n",
-      "\n",
-      "# Example usage:\n",
-      "try:\n",
-      "    number = 5\n",
-      "    result = factorial_recursive(number)\n",
-      "    print(f\"The factorial of {number} is {result}\")  # Output: 120\n",
-      "\n",
-      "\n",
-      "    number = 0\n",
-      "    result = factorial_recursive(number)\n",
-      "    print(f\"The factorial of {number} is {result}\")  # Output: 1\n",
-      "\n",
-      "    number = -2\n",
-      "    result = factorial_recursive(number)  # This will raise a ValueError\n",
-      "except ValueError as e:\n",
-      "    print(e)\n",
-      "\n",
-      "\n",
-      "```\n",
-      "\n",
-      "\n",
-      "**Explanation and Important Considerations:**\n",
-      "\n",
-      "1. **Base Case:**  The recursion stops when `n` becomes 0.  The factorial of 0 is 1, so the function returns 1 in this case.\n",
-      "\n",
-      "2. **Recursive Step:** For `n > 0`, the factorial is calculated as `n * factorial(n-1)`. The function calls itself with a smaller value of `n`, eventually reaching the base case.\n",
-      "\n",
-      "3. **Error Handling:** The function includes error handling to raise a `ValueError` if the input `n` is negative, as the factorial is not defined for negative numbers.\n",
-      "\n",
-      "4. **Recursion Depth:**  Recursive functions can lead to stack overflow errors if the recursion depth becomes too large (e.g., if you try to calculate the factorial of a very large number).  Python has a recursion limit to prevent this.  For calculating factorials of large numbers, an iterative approach is generally preferred.\n",
-      "\n",
-      "\n",
-      "**Iterative Approach (for comparison):**\n",
-      "\n",
-      "```python\n",
-      "def factorial_iterative(n):\n",
-      "    \"\"\"Calculates factorial iteratively (more efficient for large numbers).\"\"\"\n",
-      "    if n < 0:\n",
-      "        raise ValueError(\"Factorial is not defined for negative numbers.\")\n",
-      "    \n",
-      "    result = 1\n",
-      "    for i in range(1, n + 1):\n",
-      "        result *= i\n",
-      "    return result\n",
-      "```\n",
-      "\n",
-      "\n",
-      "The iterative approach is generally more efficient for very large numbers as it avoids the overhead of function calls and the risk of stack overflow errors.\n"
-     ]
-    }
-   ],
-   "source": [
-    "# PAL prompt\n",
-    "prompt = \"\"\"\n",
-    "Write a Python function to calculate the factorial of a given number using recursion.  \"\"\"\n",
-    "\n",
-    "# Generate response\n",
-    "response = model.generate_content(prompt)\n",
-    "print(\"Output for Generate Knowledge Prompting:\")\n",
-    "print(response.text)"
    ]
   },
   {
