--- a/notebooks/try.ipynb
+++ b/notebooks/try.ipynb
@@ -2,42 +2,52 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/ofge/Documents/icog/Prompt-Engineering/pe/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
-   "source": [
-    "import google.generativeai as genai\n",
-    "\n",
-    "# Set your Gemini API key\n",
-    "GEMINI_API_KEY = \"AIzaSyBao65U1wAfv7wH_xQL0gJ5KdKdftAywlk\"\n",
-    "genai.configure(api_key=GEMINI_API_KEY)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import google.generativeai as genai\n",
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "import google.generativeai as genai\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "load_dotenv()\n",
+    "GEMINI_API_KEY = os.getenv(\"GEMINI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "# Set your Gemini API key\n",
-    "GEMINI_API_KEY = \"AIzaSyBao65U1wAfv7wH_xQL0gJ5KdKdftAywlk\"\n",
+    "# GEMINI_API_KEY = \"AIzaSyBao65U1wAfv7wH_xQL0gJ5KdKdftAywlk\"\n",
     "genai.configure(api_key=GEMINI_API_KEY)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "# Set your Gemini API key\n",
+    "# GEMINI_API_KEY = \"AIzaSyBao65U1wAfv7wH_xQL0gJ5KdKdftAywlk\"\n",
+    "genai.configure(api_key=GEMINI_API_KEY)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,20 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Imagine a regular computer bit like a light switch, either on (1) or off (0).  A quantum bit, or qubit, is like a dimmer switch. It can be on, off, or somewhere in between, like a mixture of both. This \"in between\" state is called superposition.\n",
+      "Imagine a regular computer bit like a light switch, it can be either on (1) or off (0).  A quantum bit, or qubit, is like a special light switch that can be both on and off at the same time.  This \"both at once\" state is called superposition.\n",
       "\n",
-      "Another key idea is entanglement. Imagine two of these dimmer switches linked together magically.  Knowing the setting of one instantly tells you the setting of the other, no matter how far apart they are.\n",
+      "Another important idea is entanglement.  Imagine two of these special light switches linked together magically.  When you flip one, the other flips instantly too, no matter how far apart they are.  Qubits can be entangled like this, their fates linked.\n",
       "\n",
-      "Quantum computers use these special qubits and entanglement to explore many possibilities simultaneously. It's like flipping lots of coins at once instead of one at a time. This allows them to solve certain types of problems, like drug discovery or materials science, much faster than regular computers.  However, they're not meant to replace your laptop. They're specialized tools for specific tasks.\n",
+      "Because qubits can be in multiple states at once, and because they can be entangled, a quantum computer can explore many possibilities simultaneously. This allows it to solve certain types of problems much faster than a regular computer, like breaking complex codes or simulating molecules.\n",
       "\n",
-      "It's still early days for quantum computing, and building these machines is extremely challenging.  But the potential is huge, and scientists are working hard to unlock its power.\n",
+      "However, quantum computers are still in their early stages and are very difficult to build and control. They are not meant to replace our everyday computers, but rather to tackle specific problems where their unique abilities shine.\n",
       "\n"
      ]
     }
@@ -75,20 +85,6 @@
     "# Print the response\n",
     "print(response.text)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "markdown",
