--- a/notebooks/try.ipynb
+++ b/notebooks/try.ipynb
@@ -13,46 +13,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
     "load_dotenv()\n",
-    "GEMINI_API_KEY = os.getenv(\"GEMINI_API_KEY\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 31,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Set your Gemini API key\n",
-    "# GEMINI_API_KEY = \"AIzaSyBao65U1wAfv7wH_xQL0gJ5KdKdftAywlk\"\n",
-    "genai.configure(api_key=GEMINI_API_KEY)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "# Set your Gemini API key\n",
-    "# GEMINI_API_KEY = \"AIzaSyBao65U1wAfv7wH_xQL0gJ5KdKdftAywlk\"\n",
-    "genai.configure(api_key=GEMINI_API_KEY)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 33,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Initialize the Gemini model\n",
-    "model = genai.GenerativeModel('gemini-1.5-pro')\n"
+    "GEMINI_API_KEY = os.getenv(\"GEMINI_API_KEY\")\n",
+    "genai.configure(api_key=GEMINI_API_KEY)\n",
+    "genai.configure(api_key=GEMINI_API_KEY)\n",
+    "model = genai.GenerativeModel('gemini-1.5-pro')"
    ]
   },
   {
